--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ find_library (
     NO_DEFAULT_PATH # do not search system default paths
 )
 
-set(EXEC_NAMES test cdi pie rpie)
+set(EXEC_NAMES test cdi pie rpie knifeedge)
 
 foreach(EXEC_NAME ${EXEC_NAMES})
 
